feat(api): add admin directories of buildings and categories
